--- a/src/styles/module.less
+++ b/src/styles/module.less
@@ -1,63 +1,78 @@
-.fabricate-component {
-  display: inline-flex;
-  position: relative;
-  margin-right: 10px;
-  width: 72px;
-  height: 72px;
-  background-color: #382a2b;
-  border: 1px solid #232020;
-  border-radius: 5px;
-  .quantity, .name, .consumed {
-    position: absolute;
-    z-index: 1;
-    font-size: 1em;
+.fabricate-components {
+  margin-top: 15px;
+  ul {
+    padding: 0 25px;
   }
-  .consumed {
-    background: #aba693;
-    color: #4c4439;
-    font-size: 0.9em;
-    width: 16px;
-    border-radius: 8px;
-    text-align: center;
-    top: 24%;
-    right: -3%;
-    padding: 1px;
+  li {
+    display: inline-flex;
+    position: relative;
+    margin-right: 10px;
+    padding-bottom: 25px;
   }
-  .quantity{
-    padding: 2px;
-    left: 85%;
-    top: -6%;
-    background: #aba693;
-    color: #4c4439;
-    width: 18px;
-    font-size: 0.9em;
-    font-weight: bold;
-    height: 18px;
-    text-align: center;
-    border-radius: 9px;
-  }
-  .name {
+  .component {
     width: 72px;
-    left: -1px;
-    text-align: center;
-    background: #aba693;
-    color: #4c4439;
-    border-radius: 0px 0px 5px 5px;
-    font-size: 0.85em;
-    border-top: 1px solid #232020;
-    top: 90%;
-  }
-  img {
-    height: 60px;
-    width: 60px;
-    margin: 5px;
-    border-radius: 3px;
+    height: 72px;
+    background-color: #382a2b;
+    border: 1px solid #232020;
+    border-radius: 5px;
+
+    .quantity, .name, .consumed {
+      position: absolute;
+      z-index: 1;
+      font-size: 1em;
+    }
+
+    .consumed {
+      background: #aba693;
+      color: #4c4439;
+      font-size: 0.9em;
+      width: 16px;
+      border-radius: 8px;
+      text-align: center;
+      top: 24%;
+      right: -3%;
+      padding: 1px;
+    }
+
+    .quantity {
+      padding: 2px;
+      left: 85%;
+      top: -6%;
+      background: #aba693;
+      color: #4c4439;
+      width: 18px;
+      font-size: 0.9em;
+      font-weight: bold;
+      height: 18px;
+      text-align: center;
+      border-radius: 9px;
+    }
+
+    .name {
+      width: 72px;
+      left: 0px;
+      text-align: center;
+      background: #aba693;
+      color: #4c4439;
+      border-radius: 0px 0px 5px 5px;
+      font-size: 0.85em;
+      border-top: 1px solid #232020;
+      top: 67%;
+    }
+
+    img {
+      height: 60px;
+      width: 60px;
+      margin: 5px;
+      border-radius: 3px;
+    }
   }
 }
 
-.fabricate-recipe {
+.fabricate-recipe, .fabricate-crafting {
+  padding: 0 10px;
   .controls {
-    p {
+    .craft-button {
       width: 100%;
       text-align: center;
       margin: 8px 1px 0px 1px;
@@ -68,19 +83,45 @@
       line-height: 28px;
     }
   }
-  .ingredients {margin-top: 15px;
-    li {
-      .fabricate-component();
-    }
-  }
-  .ingredients, .results {
-    padding-bottom: 10px;
-  }
-  .components {
+}
+
+.fabricate-crafting {
+  margin-top: 10px;
+  .fabricate-components {
     margin-top: 15px;
-    li {
-      .fabricate-component();
+    border-radius: 5px;
+    border: 1px solid #2f2a23;
+    ul {
+      margin-top:10px;
     }
+    .fine-grained-texture();
+  }
+  .crafting-system, .recipes, .inventory {
+    margin-bottom: 20px;
+  }
+  .recipes {
+    padding-bottom: 20px;
+    .form-group.controls  {
+      select {
+        height: 28px;
+        margin-top: 7px;
+      }
+    }
+  }
+  .inventory, .hopper, .recipes {
+    .clear();
   }
 }
 
+.fine-grained-texture {
+  background-color: #928d83;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%23c1b496' fill-opacity='0.4' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
+}
+
+.clear {
+  &:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+}
