feat(Essence based crafting without a recipe): - Integrate Actor crafting tab with system data

--- a/src/styles/module.less
+++ b/src/styles/module.less
@@ -91,6 +91,7 @@
     margin-top: 15px;
     border-radius: 5px;
     border: 1px solid #2f2a23;
+    min-height: 116px;
     ul {
       margin-top:10px;
     }
