feat(Essence based crafting without a recipe): - Rewrite inventory to provide unified count of eligible crafting items for actor crafting tab

--- a/src/styles/module.less
+++ b/src/styles/module.less
@@ -87,6 +87,9 @@
 
 .fabricate-crafting {
   margin-top: 10px;
+  .crafting-tab-content {
+    padding-bottom: 15px;
+  }
   .fabricate-components {
     margin-top: 15px;
     border-radius: 5px;
