--- a/src/styles/module.less
+++ b/src/styles/module.less
@@ -130,6 +130,18 @@
   .inventory, .hopper, .recipes {
     .clear();
   }
+  .crafting-disabled {
+    position: relative;
+    padding-top: 25px;
+    .disabled-message {
+      width: 50%;
+      height: 100%;
+      top: 50%;
+      left: 25%;
+      text-align: center;
+      position: absolute;
+    }
+  }
 }
 
 .fine-grained-texture {
