--- a/src/templates/crafting-tab.html
+++ b/src/templates/crafting-tab.html
@@ -31,13 +31,17 @@
             <div class="form-fields" style="flex: 6">
                 <select>
                     {{#each recipes}}
-                    <option value="{{entryId}}">{{name}}</option>
+                        {{#if known}}
+                        <option value="{{partId}}">{{name}}</option>
+                        {{else if owned}}
+                        <option value="{{partId}}">{{name}}</option>
+                        {{/if}}
                     {{else}}
                     <option disabled="true">No Recipes can be crafted</option>
                     {{/each}}
                 </select>
                 <a title="Craft">
-                    <p class="craft-button" data-recipe-id="" data-actor-id=""><i class="fas fa-flask"></i> Craft</p>
+                    <p class="craft-button"><i class="fas fa-flask"></i> Craft</p>
                 </a>
             </div>
         </div>
