--- a/src/styles/module.less
+++ b/src/styles/module.less
@@ -72,7 +72,7 @@
 .fabricate-recipe, .fabricate-crafting {
   padding: 0 10px;
   .controls {
-    .craft-button {
+    .craft-button, .craft-button-disabled {
       width: 100%;
       text-align: center;
       margin: 8px 1px 0px 1px;
