--- a/src/styles/module.less
+++ b/src/styles/module.less
@@ -153,4 +153,61 @@
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%23c1b496' fill-opacity='0.4' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
 }
 
+// ========================================================
+// NEW UI ELEMENT STYLES
+// ========================================================
+
+.crafting-system-manager {
+
+  aside {
+    padding: 0 3px;
+  }
+
+  .header-search {
+
+    input {
+      margin: 0 !important;
+    }
+
+  }
+
+  .sidebar {
+    min-width: 240px;
+
+    .create-crafting-system {
+      margin: 0;
+    }
+
+    .pages-list {
+
+      .crafting-system {
+        display: flex;
+
+        .crafting-system-name {
+          padding: 5px;
+          color: var(--color-text-light-highlight);
+          font-size: var(--font-size-14);
+          line-height: var(--line-height-12);
+        }
+
+        .crafting-system-summary {
+          padding: 0 5px 5px 5px;
+          margin: -2px 0 0 0;
+          line-height: var(--line-height-12);
+          font-size: var(--font-size-12);
+          color: var(--color-text-light-4);
+        }
+
+        img {
+          margin: 5px;
+          border-radius: 3px;
+        }
+
+      }
+
+    }
+
+  }
+
+}
 
