--- a/src/templates/crafting-system-manager.hbs
+++ b/src/templates/crafting-system-manager.hbs
@@ -1,4 +1,4 @@
-<div class="journal-sheet-container crafting-system-manager">
+<div class="journal-sheet-container fabricate-crafting-system-manager">
 
     <aside class="sidebar directory flexcol">
 
@@ -8,33 +8,58 @@
             </div>
         </header>
 
-        <div class="action-buttons flexrow flex0">
-            <button class="create-crafting-system" type="button" data-action="createCraftingSystem">
-                <i class="fa-solid fa-circle-plus"></i> {{localize "fabricate.CraftingSystemManagerApp.contextMenu.create"}}
-            </button>
-        </div>
-
         <nav class="pages-list" aria-label="Journal Entry Table of Contents" data-tooltip-direction="RIGHT">
             <ul class="directory-list scrollable">
                 {{#each craftingSystems}}
-                <li class="directory-item level1" data-system-id="{{id}}">
-                    <div class="crafting-system">
-                        <img src="{{image}}" alt="{{name}}">
-                        <div>
-                            <span class="page-title crafting-system-name">{{name}}</span>
-                            <p class="crafting-system-summary">{{summary}}</p>
-                        </div>
+                <li class="directory-item level1">
+                    <div class="fabricate-crafting-system {{#ifEquals id ../selectedSystem.id}}selected{{/ifEquals}}" data-system-id="{{id}}">
+                        <span class="page-title fabricate-crafting-system-name">{{name}}</span>
+                        <p class="fabricate-crafting-system-summary">{{summary}}</p>
                     </div>
                 </li>
                 {{/each}}
             </ul>
         </nav>
 
+        <div class="directory-footer">
+            <div class="action-buttons flexrow flex0">
+                <button class="fabricate-create-crafting-system" type="button" data-action="createCraftingSystem">
+                    <i class="fa-solid fa-circle-plus"></i> {{localize "fabricate.CraftingSystemManagerApp.contextMenu.create"}}
+                </button>
+            </div>
+
+            <div class="action-buttons flexrow flex0">
+                <button class="fabricate-import-crafting-system" type="button" data-action="importCraftingSystem">
+                    <i class="fa-solid fa-file-import"></i></i> {{localize "fabricate.CraftingSystemManagerApp.contextMenu.import"}}
+                </button>
+            </div>
+        </div>
+
     </aside>
 
-    <section class="journal-entry-content flexcol" style="overflow: scroll;">
+    <section class="journal-entry-content flexcol fabricate-crafting-system-editor" style="overflow: scroll;">
 
+        {{#if selectedSystem}}
 
+            <div class="fabricate-crafting-system" data-crafting-system-id="{{selectedSystem.id}}">
+
+                <header class="fabricate-crafting-system-header">
+                    <h1>{{selectedSystem.name}}</h1>
+                    <h4>{{selectedSystem.summary}}</h4>
+                    <hr/>
+                    <p>{{selectedSystem.description}}</p>
+                </header>
+
+            </div>
+
+        {{else}}
+
+            <div class="flexrow flex3"></div>
+            <div class="flexrow flex3">
+                <p class="fabricate-no-system-selected">No crafting system selected.<br/>Create a new system or select one from the left menu.</p>
+            </div>
+
+        {{/if}}
 
     </section>
 
