--- a/src/templates/crafting-system-manager.hbs
+++ b/src/templates/crafting-system-manager.hbs
@@ -4,7 +4,7 @@
 
         <header class="directory-header">
             <div class="header-search flexrow flex0">
-                <input type="text" name="search" value="" autocomplete="off" placeholder="{{localize "fabricate.CraftingSystemManagerApp.contextMenu.search"}}">
+                <input type="text" name="search" value="" autocomplete="off" placeholder="{{localize "fabricate.CraftingSystemManagerApp.sidebar.search"}}">
             </div>
         </header>
 
@@ -24,13 +24,13 @@
         <div class="directory-footer">
             <div class="action-buttons flexrow flex0">
                 <button class="fabricate-create-crafting-system" type="button" data-action="createCraftingSystem">
-                    <i class="fa-solid fa-circle-plus"></i> {{localize "fabricate.CraftingSystemManagerApp.contextMenu.create"}}
+                    <i class="fa-solid fa-circle-plus"></i> {{localize "fabricate.CraftingSystemManagerApp.sidebar.create"}}
                 </button>
             </div>
 
             <div class="action-buttons flexrow flex0">
                 <button class="fabricate-import-crafting-system" type="button" data-action="importCraftingSystem">
-                    <i class="fa-solid fa-file-import"></i></i> {{localize "fabricate.CraftingSystemManagerApp.contextMenu.import"}}
+                    <i class="fa-solid fa-file-import"></i></i> {{localize "fabricate.CraftingSystemManagerApp.sidebar.import"}}
                 </button>
             </div>
         </div>
@@ -41,7 +41,7 @@
 
         {{#if selectedSystem}}
 
-            <div class="fabricate-crafting-system" data-crafting-system-id="{{selectedSystem.id}}">
+            <div class="fabricate-crafting-system-details" data-crafting-system-id="{{selectedSystem.id}}">
 
                 <header class="fabricate-crafting-system-header">
                     <h1>{{selectedSystem.name}}</h1>
