--- a/src/templates/partials/readonly-crafting-system.hbs
+++ b/src/templates/partials/readonly-crafting-system.hbs
@@ -1,6 +1,21 @@
 <header class="fabricate-crafting-system-header">
     <h1>{{system.name}}</h1>
-    <h4>{{system.summary}} (locked)</h4>
+    <h4>{{system.summary}}</h4>
     <hr/>
     <p>{{system.description}}</p>
+    <p><i>This crafting system is bundled with Fabricate and cannot be modified.</i></p>
 </header>
+
+<hr/>
+
+<div class="fabricate-system-toggle">
+    <form>
+        <div class="form-group">
+            <label for="enabled">{{localize "fabricate.CraftingSystemManagerApp.editor.enabled.label"}}</label>
+            <div class="form-fields">
+                <input name="enabled" type="checkbox" checked="{{system.enabled}}">
+            </div>
+        </div>
+        <div class="form-group"><p>{{localize "fabricate.CraftingSystemManagerApp.editor.enabled.description"}}</p></div>
+    </form>
+</div>
