- create systems with basic information - select other systems to view

--- a/src/styles/module.less
+++ b/src/styles/module.less
@@ -195,11 +195,12 @@
       }
 
       .fabricate-crafting-system {
+        border-radius: 5px;
+        padding: 2px 5px;
+        margin-top: 5px;
 
         &.selected {
           background: #262626ed;
-          border-radius: 5px;
-          padding: 2px 5px;
         }
 
         .fabricate-crafting-system-name {
