--- a/src/styles/module.less
+++ b/src/styles/module.less
@@ -197,7 +197,7 @@
       .fabricate-crafting-system {
         border-radius: 5px;
         padding: 2px 5px;
-        margin-top: 5px;
+        margin: 3px 0;
 
         &.selected {
           background: #262626ed;
