- improves the management ui styles

--- a/src/styles/module.less
+++ b/src/styles/module.less
@@ -172,11 +172,38 @@
   }
 
   .fabricate-crafting-system-editor {
-
     padding: 10px;
+
+    .fabricate-crafting-system-header {
+
+      .fabricate-locked {
+        text-align: center;
+        background: #8383832b;
+        padding: 5px 3px;
+        border-radius: 3px;
+        font-style: italic;
+      }
+
+    }
 
     p.fabricate-no-system-selected {
       text-align: center;
+    }
+
+    .fabricate-crafting-system-details {
+
+      .fabricate-basic-system-details {
+
+        label {
+          flex: 1;
+        }
+
+        .form-group {
+          flex: 4;
+        }
+
+      }
+
     }
 
   }
