--- a/src/templates/partials/readonly-crafting-system.hbs
+++ b/src/templates/partials/readonly-crafting-system.hbs
@@ -1,9 +1,10 @@
-<p><i>This crafting system is bundled with Fabricate and cannot be modified.</i></p>
 <header class="fabricate-crafting-system-header">
     <h1>{{system.name}}</h1>
     <h4>{{system.summary}}</h4>
     <hr/>
     <p>{{system.description}}</p>
+    <hr/>
+    <p class="fabricate-locked"><i class="fa-solid fa-lock"></i> {{localize "fabricate.CraftingSystemManagerApp.editor.locked"}}</p>
 </header>
 
 <hr/>
