- adds edit details button and dialog

--- a/src/styles/module.less
+++ b/src/styles/module.less
@@ -175,6 +175,15 @@
     padding: 10px;
 
     .fabricate-crafting-system-header {
+      position: relative;
+
+      .fabricate-edit-details {
+        position: absolute;
+        right: 0;
+        top: 0;
+        height: 30px;
+        width: 30px;
+      }
 
       .fabricate-locked {
         text-align: center;
