--- a/src/styles/module.less
+++ b/src/styles/module.less
@@ -157,18 +157,59 @@
 // NEW UI ELEMENT STYLES
 // ========================================================
 
+.fabricate-component-tile(@tile-size, @info-size) {
+  display: inline-flex;
+  position: relative;
+  cursor: pointer;
+  padding: 0;
+  height: @tile-size;
+  width: @tile-size;
+  margin-right: calc(@tile-size / 6);
+  margin-bottom: calc(@tile-size / 6);
+  .fabricate-component-name {
+    position: absolute;
+    width: @tile-size;
+    z-index: 1;
+    bottom: 0;
+    left: 0;
+    color: var(--color-text-light-1);
+    background: var(--color-border-dark-2);
+    font-size: calc(@tile-size / 8);
+    text-align: center;
+    padding: 2px 5px;
+  }
+  .fabricate-info {
+    width: @info-size;
+    position: absolute;
+    z-index: 2;
+    top: 0;
+    right: 0;
+    margin-right: calc(-1 * @info-size / 2);
+    margin-top: calc(-1 * @info-size / 2);
+    .fabricate-detail, .fabricate-button {
+      display: block;
+      width: @info-size;
+      height: @info-size;
+      color: var(--color-text-light-1);
+      background: var(--color-border-dark-2);
+      border-radius: calc(@info-size / 2);
+      font-size: calc(@info-size / 2);
+      padding-top: calc(@info-size / 5);
+      margin-bottom: calc(@info-size / 10);
+      text-align: center;
+    }
+  }
+}
+
+.fabricate-inline-component-list {
+  display: inline-flex;
+}
+
+
 .fabricate-crafting-system-manager {
 
   aside {
     padding: 0 3px;
-  }
-
-  .header-search {
-
-    input {
-      margin: 0 !important;
-    }
-
   }
 
   .fabricate-crafting-system-editor {
@@ -200,6 +241,94 @@
     }
 
     .fabricate-crafting-system-details {
+
+      .fabricate-crafting-system-navigation {
+        margin-top: 20px;
+        margin-bottom: 20px;
+        padding-bottom: 20px;
+        border-bottom: 1px solid var(--color-border-light-2);
+        .item {
+          color: var(--color-text-dark-2);
+          font-weight: bold;
+          font-size: var(--font-size-16);
+          &.active {
+            font-weight: bolder;
+            text-decoration: underline;
+          }
+        }
+      }
+
+      .fabricate-create-recipe, .fabricate-create-component {
+        text-align: center;
+        height: 68px;
+        margin-bottom: 20px;
+        background: #d1d1d19c;
+        padding-top: 26px;
+        border: 1px dashed #7a78788c;
+        border-radius: 3px;
+      }
+
+      .fabricate-recipes {
+
+        .fabricate-recipe {
+          display: inline-flex;
+          position: relative;
+          margin-bottom: 10px;
+          width: 100%;
+
+          .fabricate-edit-recipe {
+            position: absolute;
+            right: 0;
+            top: 6px;
+
+            button {
+              width: 28px;
+              height: 28px;
+            }
+
+          }
+
+          .fabricate-recipe-name, .fabricate-recipe-results {
+            display: inline-flex;
+            margin-left: 10px;
+          }
+
+          .fabricate-recipe-name {
+            margin-top: 12px;
+            font-weight: bold;
+            font-size: var(--font-size-14);
+          }
+
+          .fabricate-recipe-results {
+            margin-top: 14px;
+            margin-right: 10px;
+            font-size: var(--font-size-12);
+          }
+
+          img {
+            width: 40px;
+            height: 40px;
+          }
+
+          .fabricate-component {
+
+            .fabricate-component-tile(40px; 20px;);
+
+          }
+
+        }
+
+      }
+
+      .fabricate-components {
+
+        .fabricate-component {
+
+          .fabricate-component-tile(100px; 24px;);
+
+        }
+
+      }
 
       .fabricate-basic-system-details {
 
