- rough create/manage essence UI

--- a/src/styles/module.less
+++ b/src/styles/module.less
@@ -242,6 +242,38 @@
 
     .fabricate-crafting-system-details {
 
+      .fabricate-essence-table {
+
+        .fabricate-essence-table-header {
+          height: 28px;
+          margin: 10px 0;
+          font-weight: bold;
+        }
+
+        .fabricate-essence-table-row {
+          min-height: 28px;
+          border-top: 1px solid grey;
+
+          span {
+            display: inline-flex;
+            min-height: 28px;
+            margin-top: 10px;
+          }
+
+          .fabricate-edit-essence {
+
+            button {
+              height: 28px;
+              width: 28px;
+              margin-top: 5px;
+            }
+
+          }
+
+        }
+
+      }
+
       .fabricate-crafting-system-navigation {
         margin-top: 20px;
         margin-bottom: 20px;
