--- a/src/templates/partials/editable-crafting-system.hbs
+++ b/src/templates/partials/editable-crafting-system.hbs
@@ -66,10 +66,10 @@
                     </div>
                 </div>
                 <div class="fabricate-edit-recipe">
-                    <button class="fabricate-edit-details" type="button" data-action="editRecipe" data-recipe-id="recipe-id" data-tooltip="Edit recipe">
+                    <button type="button" data-action="editRecipe" data-recipe-id="recipe-id" data-tooltip="Edit recipe">
                         <i class="fa-solid fa-pen-to-square" style="pointer-events: none"></i>
                     </button>
-                    <button class="fabricate-edit-details" type="button" data-action="deleteRecipe" data-recipe-id="recipe-id" data-tooltip="Delete recipe">
+                    <button type="button" data-action="deleteRecipe" data-recipe-id="recipe-id" data-tooltip="Delete recipe">
                         <i class="fa-solid fa-trash" style="pointer-events: none"></i>
                     </button>
                 </div>
@@ -99,10 +99,10 @@
                     </div>
                 </div>
                 <div class="fabricate-edit-recipe">
-                    <button class="fabricate-edit-details" type="button" data-action="editRecipe" data-recipe-id="recipe-id" data-tooltip="Edit recipe">
+                    <button type="button" data-action="editRecipe" data-recipe-id="recipe-id" data-tooltip="Edit recipe">
                         <i class="fa-solid fa-pen-to-square" style="pointer-events: none"></i>
                     </button>
-                    <button class="fabricate-edit-details" type="button" data-action="deleteRecipe" data-recipe-id="recipe-id" data-tooltip="Delete recipe">
+                    <button type="button" data-action="deleteRecipe" data-recipe-id="recipe-id" data-tooltip="Delete recipe">
                         <i class="fa-solid fa-trash" style="pointer-events: none"></i>
                     </button>
                 </div>
@@ -132,10 +132,10 @@
                     </div>
                 </div>
                 <div class="fabricate-edit-recipe">
-                    <button class="fabricate-edit-details" type="button" data-action="editRecipe" data-recipe-id="recipe-id" data-tooltip="Edit recipe">
+                    <button type="button" data-action="editRecipe" data-recipe-id="recipe-id" data-tooltip="Edit recipe">
                         <i class="fa-solid fa-pen-to-square" style="pointer-events: none"></i>
                     </button>
-                    <button class="fabricate-edit-details" type="button" data-action="deleteRecipe" data-recipe-id="recipe-id" data-tooltip="Delete recipe">
+                    <button type="button" data-action="deleteRecipe" data-recipe-id="recipe-id" data-tooltip="Delete recipe">
                         <i class="fa-solid fa-trash" style="pointer-events: none"></i>
                     </button>
                 </div>
@@ -175,29 +175,59 @@
     </div>
     <div class="tab" data-group="fabricate" data-tab="essences">
         <button type="submit"><i class="fa-solid fa-circle-plus" data-action="createEssence" data-system-id="1"></i> Create an Essence</button>
-        <div class="flexcol">
-            <div class="flexrow">
-                <h3>Name</h3>
-                <h3>Description</h3>
-                <h3>Tooltip</h3>
-                <h3>Slug</h3>
-                <h3>Icon Class</h3>
-                <h3></h3>
+        <div class="fabricate-essence-table flexcol">
+            <div class="fabricate-essence-table-header flexrow">
+                <h4>Name</h4>
+                <h4>Description</h4>
+                <h4>Tooltip</h4>
+                <h4>Slug</h4>
+                <h4>Icon Class</h4>
+                <h4></h4>
             </div>
-            <div class="flexrow">
+            <div class="fabricate-essence-table-row flexrow">
                 <span>Name</span>
                 <span>Description</span>
                 <span>Tooltip</span>
                 <span>Slug</span>
                 <span>Icon Class</span>
-                <div class="fabricate-edit-recipe">
+                <div class="fabricate-edit-essence">
                     <button type="button" data-action="editRecipe" data-recipe-id="recipe-id" data-tooltip="Edit recipe">
                         <i class="fa-solid fa-pen-to-square" style="pointer-events: none"></i>
                     </button>
                     <button type="button" data-action="deleteRecipe" data-recipe-id="recipe-id" data-tooltip="Delete recipe">
                         <i class="fa-solid fa-trash" style="pointer-events: none"></i>
                     </button>
-                </div class="fabricate-edit-recipe">
+                </div>
+            </div>
+            <div class="fabricate-essence-table-row flexrow">
+                <span>Name</span>
+                <span>Description</span>
+                <span>Tooltip</span>
+                <span>Slug</span>
+                <span>Icon Class</span>
+                <div class="fabricate-edit-essence">
+                    <button type="button" data-action="editRecipe" data-recipe-id="recipe-id" data-tooltip="Edit recipe">
+                        <i class="fa-solid fa-pen-to-square" style="pointer-events: none"></i>
+                    </button>
+                    <button type="button" data-action="deleteRecipe" data-recipe-id="recipe-id" data-tooltip="Delete recipe">
+                        <i class="fa-solid fa-trash" style="pointer-events: none"></i>
+                    </button>
+                </div>
+            </div>
+            <div class="fabricate-essence-table-row flexrow">
+                <span>Name</span>
+                <span>Description</span>
+                <span>Tooltip</span>
+                <span>Slug</span>
+                <span>Icon Class</span>
+                <div class="fabricate-edit-essence">
+                    <button type="button" data-action="editRecipe" data-recipe-id="recipe-id" data-tooltip="Edit recipe">
+                        <i class="fa-solid fa-pen-to-square" style="pointer-events: none"></i>
+                    </button>
+                    <button type="button" data-action="deleteRecipe" data-recipe-id="recipe-id" data-tooltip="Delete recipe">
+                        <i class="fa-solid fa-trash" style="pointer-events: none"></i>
+                    </button>
+                </div>
             </div>
         </div>
     </div>
