- rough create/manage essence UI

--- a/src/styles/module.less
+++ b/src/styles/module.less
@@ -247,7 +247,9 @@
         .fabricate-essence-table-header {
           height: 28px;
           margin: 10px 0;
-          font-weight: bold;
+          h4 {
+            font-weight: bold;
+          }
         }
 
         .fabricate-essence-table-row {
