- rough create/manage essence UI

--- a/src/templates/partials/editable-crafting-system.hbs
+++ b/src/templates/partials/editable-crafting-system.hbs
@@ -191,10 +191,10 @@
                 <span>Slug</span>
                 <span>Icon Class</span>
                 <div class="fabricate-edit-essence">
-                    <button type="button" data-action="editRecipe" data-recipe-id="recipe-id" data-tooltip="Edit recipe">
+                    <button type="button" data-action="editRecipe" data-recipe-id="recipe-id" data-tooltip="Edit essence">
                         <i class="fa-solid fa-pen-to-square" style="pointer-events: none"></i>
                     </button>
-                    <button type="button" data-action="deleteRecipe" data-recipe-id="recipe-id" data-tooltip="Delete recipe">
+                    <button type="button" data-action="deleteRecipe" data-recipe-id="recipe-id" data-tooltip="Delete essence">
                         <i class="fa-solid fa-trash" style="pointer-events: none"></i>
                     </button>
                 </div>
@@ -206,10 +206,10 @@
                 <span>Slug</span>
                 <span>Icon Class</span>
                 <div class="fabricate-edit-essence">
-                    <button type="button" data-action="editRecipe" data-recipe-id="recipe-id" data-tooltip="Edit recipe">
+                    <button type="button" data-action="editRecipe" data-recipe-id="recipe-id" data-tooltip="Edit essence">
                         <i class="fa-solid fa-pen-to-square" style="pointer-events: none"></i>
                     </button>
-                    <button type="button" data-action="deleteRecipe" data-recipe-id="recipe-id" data-tooltip="Delete recipe">
+                    <button type="button" data-action="deleteRecipe" data-recipe-id="recipe-id" data-tooltip="Delete essence">
                         <i class="fa-solid fa-trash" style="pointer-events: none"></i>
                     </button>
                 </div>
@@ -221,10 +221,10 @@
                 <span>Slug</span>
                 <span>Icon Class</span>
                 <div class="fabricate-edit-essence">
-                    <button type="button" data-action="editRecipe" data-recipe-id="recipe-id" data-tooltip="Edit recipe">
+                    <button type="button" data-action="editRecipe" data-recipe-id="recipe-id" data-tooltip="Edit essence">
                         <i class="fa-solid fa-pen-to-square" style="pointer-events: none"></i>
                     </button>
-                    <button type="button" data-action="deleteRecipe" data-recipe-id="recipe-id" data-tooltip="Delete recipe">
+                    <button type="button" data-action="deleteRecipe" data-recipe-id="recipe-id" data-tooltip="Delete essence">
                         <i class="fa-solid fa-trash" style="pointer-events: none"></i>
                     </button>
                 </div>
